--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="best_deals">Best Deals</string>
     <string name="menu_menu">Categories</string>
     <string name="size">Size</string>
+    <string name="add_on">Addon</string>
 
 </resources>
