--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_detail">Food Detail</string>
     <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
+    <string name="menu_cart">Cart</string>
     <string name="menu_food_list">Food List</string>
 
     <string name="popular_categories">Popular Categories</string>
@@ -20,5 +20,6 @@
     <string name="menu_menu">Categories</string>
     <string name="size">Size</string>
     <string name="add_on">Addon</string>
+    <string name="action_clear_cart">Clear Cart</string>
 
 </resources>
