--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_cart">Cart</string>
     <string name="menu_food_list">Food List</string>
+    <string name="sign_out">Sign Out</string>
 
     <string name="popular_categories">Popular Categories</string>
     <string name="best_deals">Best Deals</string>
