--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_detail">Food Detail</string>
-    <string name="menu_tools">Tools</string>
+    <string name="menu_view_orders">View Orders</string>
     <string name="menu_cart">Cart</string>
     <string name="menu_food_list">Food List</string>
     <string name="sign_out">Sign Out</string>
