--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_view_orders">View Orders</string>
     <string name="menu_cart">Cart</string>
     <string name="menu_food_list">Food List</string>
+    <string name="menu_location">Location</string>
     <string name="sign_out">Sign Out</string>
 
     <string name="popular_categories">Popular Categories</string>
@@ -22,5 +23,6 @@
     <string name="size">Size</string>
     <string name="add_on">Addon</string>
     <string name="action_clear_cart">Clear Cart</string>
+    <string name="action_search">Seacrh</string>
 
 </resources>
